# mbe-automation

./: .gitignore  .gitmodules  AGENTS.md  CP_analysis_report.md  CSV.py  CSV_HF(PBC).py  CSV_MRCC.py  CSV_RPA.py  DataAnalysis.py  DataAnalysis_LNO-CCSD(T).py  DataAnalysis_RPA.py  DirectoryStructure.py  ErrorAnalysis_RPA.py  Inputs.py  Inputs_MRCC.py  Inputs_ORCA.py  Inputs_PYSCF.py  Inputs_RPA.py  Keywords.py  MBE.py  MEMORY_SAFETY_ANALYSIS.md  Main.py  PARALLELIZATION_ANALYSIS.md  PBC.py  QueueScripts.py  REPORT.md  RPA-AnalyzeLogs.py  XYZ.py  code_review_AtomicReference.md  code_review_delta_mace.md  code_review_findings.md  code_review_findings_v2.md  code_review_findings_v3.md  code_review_report.md  codepath_report.md  debye_eos_handling_report.md  design_proposal_anysystemtype.md  dftb_review_report.md  dftb_review_report_v2.md  dftb_review_report_v4.md  (+36 more)
.antigravity/: 001_symmetry_of_dynamical_matrix.md
.gemini/: FORMATTING.md  GEMINI.md  TESTING.md  TODO.md
InputTemplates/: AVQZ.inp  AVTZ.inp  MRCC-AVDZ.inp  MRCC-AVQZ.inp  MRCC-AVTZ.inp  RPA-AVQZ.inp
QueueTemplates/: Ares.py  Barbora.py  MRCC-Ares.py  MRCC-Barbora.py  MRCC-Karolina.py  ORCA-Ares.py  RPA-Ares.py
QueueTemplates/Ares/: MRCC.py  RPA.py
QueueTemplates/Barbora/: RPA.py
QueueTemplates/Poznań/: MRCC.py  PYSCF.py  RPA.py
Systems/Sherrill-JCP2023/: INFO.txt
Systems/benzophenone_dft_pbe_d3bj/: INFO.txt
Systems/cubic-acetylene/: POSCAR
Systems/ethane/: POSCAR
Systems/ethylene/: POSCAR
Systems/methanol/: info.txt  methanol.cif
Systems/orthorombic-acetylene/: POSCAR
Systems/piracetam/: CIFToXYZ.py
adr/: 001_symmetry_of_dynamical_matrix.md
docs/: 00_installation.md  01_api.md  01_api_classes.md  01_quasi_harmonic.md  02_calculators.md  02_molecular_dynamics.md  03_configuration_classes.md  03_training_set.md  04_cookbook_dftb_mace.md  04_working_with_hdf5_datasets.md  05_cookbook_phonons.md  05_frequencies_eigenvectors.md  05_results.md  06_bottlenecks.md  06_quasi_harmonic.md  07_cookbook_mace_md_dftb_energies.md  07_molecular_dynamics.md  08_cookbook_delta_learning_dataset.md  08_training_set.md  09_cookbook_frequencies_eigenvectors.md  09_working_with_hdf5_datasets.md  10_api_classes.md  10_cookbook_mace_md_dftb_energies.md  11_calculators.md  11_cookbook_delta_learning_dataset.md  11_troubleshooting_ray.md  12_cookbook_export_with_atomic_energies.md  12_cookbook_hf_dataset.md  13_configuration_classes.md  README.md  analysis.rst  analysis_primitive_cell_consistency.md  conf.py  cp_formulas_rebase_analysis.md  index.rst  molecular_dynamics.rst  quasi_harmonic.rst  training_analysis.ipynb  training_set.rst
postprocessing/: DataAnalysis_HF(PBC).py  DataAnalysis_LNO-CCSD(T).py  DataAnalysis_RPA.py  adps_md.py
src/mbe_automation/: __init__.py  cluster_comparison.py  directory_structure.py  display.py  hdf5.py  interfaces.py  io.py  keywords.py  kpoints.py  mbe.py  project.py  properties.py  (+4 more)
src/mbe_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: compare_matchers.py  test_compare_matchers.py  verify_molecule_detection.py
(+243 files in other folders)
