[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mbe-automation"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.9.0",
  "numpy",
  "networkx",
  "scipy",
  "ase>=3.26.0",
  "dscribe",
  "mace-torch>=0.3.14",
  "matplotlib",
  "pymatgen",
  "pyscf>=2.11.0",
  "pyscf-dispersion",
  "scikit-learn",
  "spglib",
  "seekpath",
  "phonopy>=2.43.1",
  "tqdm",
  "joblib",
  "h5py",
  "pandas",
  "ipi",
  "doped",
  "dynasor",
  "nglview",
  "pymatviz",
  "chemiscope",
]

[project.optional-dependencies]
# For CUDA 11.X environments
gpu-cuda11 = [
  "cuequivariance",
  "cuequivariance-torch",
  "cuequivariance-ops-torch-cu11",
  "gpu4pyscf-cuda11x>=1.5.2",
  "cutensor-cu11",
  "ray",
]
# For CUDA 12.X environments
gpu-cuda12 = [
  "cuequivariance",
  "cuequivariance-torch",
  "cuequivariance-ops-torch-cu12",
  "gpu4pyscf-cuda12x>=1.5.2",
  "cutensor-cu12",
  "ray",
]
