[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mbe-automation"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = [
  "torch",
  "numpy",
  "networkx",
  "scipy",
  "ase>=3.26.0",
  "dscribe",
  "matplotlib",
  "pymatgen>=2026.3.23",
  "pymatgen-core>=2026.4.7",
  "pyscf>=2.12.0",
  "pyscf-dispersion",
  "scikit-learn",
  "spglib",
  "seekpath",
  "euphonic",
  "phonopy>=2.43.1",
  "symfc>=1.6.1",
  "tqdm",
  "joblib",
  "h5py",
  "pandas",
  "ipi",
  "doped",
  "dynasor",
  "nglview",
  "pymatviz",
  "chemiscope",
  "gemmi",
]

[project.optional-dependencies]
mace = [
  "torch>=2.9.0",
  "mace-torch>=0.3.15",
]
uma = [
  "fairchem-core>=2.19.0",
]
# For CUDA 11.X environments
gpu-cuda11 = [
  "cuequivariance",
  "cuequivariance-torch",
  "cuequivariance-ops-torch-cu11",
  "gpu4pyscf-cuda11x>=1.5.2",
  "cutensor-cu11",
  "ray",
]
# For CUDA 12.X environments
gpu-cuda12 = [
  "cuequivariance",
  "cuequivariance-torch",
  "cuequivariance-ops-torch-cu12",
  "gpu4pyscf-cuda12x>=1.5.2",
  "cutensor-cu12",
  "ray",
]
